--- a/angular.json
+++ b/angular.json
@@ -25,12 +25,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/recrursos/css/bootstrap.min.css",
+              "src/recrursos/css/dataTables.bootstrap5.css"
             ],
             "scripts": [
               "src/recrursos/js/markdown.js",
               "src/recrursos/js/datatables-simple-demo.js",
               "src/recrursos/js/custom.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/jquery/dist/jquery.js",
               "node_modules/feather-icons/dist/feather.min.js"
             ],
             "server": "src/main.server.ts",
